<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="16dp"
    android:elevation="25dp"
    app:cardBackgroundColor="#F3F7F3"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:cardUseCompatPadding="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#00F7F2F2">

        <TextView
            android:id="@+id/casamento_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/casamento"
            android:textColor="#2E2B2B"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/semanas_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/casamento_text"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/semanas_restantes"
            android:textColor="#2E2B2B"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casamento_text" />

        <TextView
            android:id="@+id/finaliza_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/semanas_text"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/finaliza_em"
            android:textColor="#2E2B2B"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/semanas_text" />

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/finaliza_text"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:progress="58"
            android:progressBackgroundTint="#79DDD8D8"
            android:progressTint="#39AD0D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finaliza_text" />

        <TextView
            android:id="@+id/dinheiro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/determinateBar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/r_957_de_r_1000_00"
            android:textColor="#2E2B2B"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/determinateBar" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_aguardando"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checkable="false"
            android:text="@string/aguardar_dinheiro"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#FD9642"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_sync_prancheta_1"
            app:iconStartPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dinheiro_text"
            app:layout_constraintVertical_bias="0.666"
            app:textEndPadding="6dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parceiro"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layoutDirection="rtl"
            android:text="@string/parceiro"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#39AD0D"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_logobranco"
            app:iconStartPadding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/weeks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/casamento_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/weeks"
            android:layout_width="16dp"
            android:layout_height="17dp"
            android:layout_below="@id/chip_parceiro"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/semanas_text"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/_57"
            android:textColor="#2E2B2B"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/semanas_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weeks"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/finaliza_text"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/data"
            android:textColor="#2E2B2B"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/finaliza_text"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>