<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="16dp"
    android:elevation="25dp"
    app:cardBackgroundColor="#F3F7F3"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:cardUseCompatPadding="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/casamento"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="Semanas restantes"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="Finaliza em"
            android:textSize="11sp" />

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:progress="58"
            android:progressBackgroundTint="#79DDD8D8"
            android:progressTint="#39AD0D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="R$ 957 de R$ 1000,00"
            android:textSize="10dp" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_aguardando"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/aguardar_dinheiro"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#FD9642"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_sync_prancheta_1"
            app:iconStartPadding="8dp"
            app:textEndPadding="6dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parceiro"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layoutDirection="rtl"
            android:text="@string/parceiro"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#39AD0D"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_logobranco"
            app:iconStartPadding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/_57"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="12 de janeiro de 2019"
            android:textSize="11sp" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
