<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="16dp"
    android:elevation="25dp"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/casamento_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/casamento"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/semanas_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/casamento_text"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="Semanas restantes"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/finaliza_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/semanas_text"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="Finaliza em"
            android:textSize="11sp" />

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/finaliza_text"
            android:layout_margin="8dp"
            android:progress="58"
            android:progressBackgroundTint="#79DDD8D8"
            android:progressTint="#39AD0D" />

        <TextView
            android:id="@+id/dinheiro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/determinateBar"
            android:layout_marginStart="8dp"
            android:text="@string/faltando"
            android:textSize="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_aguardando"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/aguardar_dinheiro"
            android:textColor="#FFFFFF"
            android:layout_below="@id/dinheiro_text"
            android:layout_margin="8dp"
            app:chipBackgroundColor="#FD9642"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_sync_prancheta_1"
            app:iconStartPadding="8dp"
            app:textEndPadding="6dp" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parceiro"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_toEndOf="@id/casamento_text"
            android:layoutDirection="rtl"
            android:text="@string/parceiro"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#39AD0D"
            app:chipCornerRadius="20dp"
            app:chipIcon="@drawable/ic_logobranco"
            app:iconStartPadding="8dp" />

        <TextView
            android:id="@+id/weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chip_parceiro"
            android:layout_marginStart="219dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/semanas_text"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="57"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weeks"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="136dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/finaliza_text"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="12 de janeiro de 2019"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>